Update nextflow.config to be able to select which profile to use
rather than default to Joe's docker image

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,7 +8,6 @@ params {
 }
 
 process {
-    container = 'brwnj/classifier-nf:1.1.0'
     time = { 24.hour * task.attempt }
     memory = { 8.GB * task.attempt }
     cpus = 1
@@ -20,10 +19,14 @@ process {
 }
 
 profiles {
-    conda { process.conda = "$baseDir/environment.yml" }
+    conda { 
+        conda.enabled = true
+        process.conda = "$baseDir/environment.yml" }
+    
     docker {
         docker.enabled = true
-    }
+        process.container = 'brwnj/classifier-nf:1.1.0'
+        }
     singularity {
         singularity.enabled = true
     }
