--- a/nextflow.config
+++ b/nextflow.config
@@ -8,6 +8,7 @@ params {
 }
 
 process {
+    conda = "$baseDir/environment.yml"
     time = { 24.hour * task.attempt }
     memory = { 8.GB * task.attempt }
     cpus = 1
